gcc/testsuite/rust/rustc/ui/linkage-attr/issue-109144_dg.rs
#![crate_type = "lib"]
#[link(kind = "static", modifiers = "+whole-archive,+bundle")]
// { dg-error ".E0459." "" { target *-*-* } .-1 }
extern  {}

